--- a/style.css
+++ b/style.css
@@ -34,12 +34,10 @@ nav {
     opacity: .85;
 }
 
-a {
-    font-size: 13px;
-}
+
 .navlink {
     color: rgba(0,0,0,0.87);
-    font-size: 12px;
+    font-size: 11px;
     padding: 2px 20px 10px 0;
 }
 .navlink:hover {
@@ -53,14 +51,9 @@ text-align: center;
 padding: 100px;
 }
 .search-bar {
-    display: block;
-    padding: 10px;
-    border-radius: 24px;
-    margin: auto;
-    margin-top: 20px;
-    width: 500px;
-    border: 1px solid #dfe1e5;
+ border: none;
 }
+
 .google-logo {
     width: 272px;
     height: 92px;
@@ -81,11 +74,30 @@ input[type=submit]:hover {
     margin-top: 10px;
     font-size: 11px;
 }
-.search-bar:hover {
-    box-shadow: 0 1px 2px  rgb(170, 170, 170);
+
 }
 .container a:hover {
     text-decoration: underline;
+}
+.search-icon {
+    align-items: center;
+    max-width: 13px;
+    opacity: .3;
+    margin-right: 10px;
+    
+}
+.search-container {
+    display: flex;
+    padding: 10px;
+    border-radius: 24px;
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: 14px;
+    width: 500px;
+    border: 1px solid #dfe1e5;
+}
+.search-container:hover {
+    box-shadow: 0 1px 2px  rgb(170, 170, 170);
 }
 
 
